--- a/FamilyMapClient/gradle/wrapper/gradle-wrapper.properties
+++ b/FamilyMapClient/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Mar 07 15:17:40 MST 2020
+#Fri Apr 10 21:47:49 MDT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
